# pyfluent-iterables

./: .gitignore  LICENSE  README.md  pyproject.toml  trivy-config.yaml  type-check-and-format.sh
.github/workflows/: release.yaml  repo-scan.yaml  tests.yaml
pyfluent_iterables/: __init__.py  fluent.py
tests/: test_fluent_iterable.py  test_fluent_mapping.py
